I have a great exprience

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My frist github said</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <p>Hello I am susses my frist github course</p>
+    <p>I am Happy to pronounce that I am susses about my work </p>
+    <br>
+    <br>
+    <h3>If you need to do some thing then you should be fouces on your goal </h3>
 </body>
 </html>
